# onnx-test-cc

./: .gitignore  Cargo.toml  README.md  iris.onnx  iris_onnx.py  pyproject.toml
onnx-runner/: Cargo.toml  build.rs  wrapper.h
onnx-runner/cpp/: CMakeLists.txt  onnx.cc  onnx.h
onnx-runner/src/: bindings.rs
src/: main.rs
