[tool.poetry]
name = "onnx-test"
version = "0.1.0"
description = ""
authors = ["Ryo Aita <792803+aita@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.2"
scipy = "^1.8.0"
onnxmltools = "^1.10.0"
lightgbm = "^3.3.2"
onnxruntime = "^1.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
